[package]
name = "riemannrho"
version = "0.1.0"
edition = "2021"
description = "A Rust library for approximating nontrivial zeros of the Riemann zeta function using the Riemann-Siegel formula."
authors = ["Iman Akbari <iman.akbari@imnetsecurity.com>"]
license = "MIT"
repository = "https://github.com/imnetsecurity/riemannrho"
keywords = ["riemann-zeta", "number-theory", "zeros", "mathematics"]
categories = ["science", "mathematics"]

[lib]
crate-type = ["rlib"]

[features]
# Default build is fully self-contained (no dependencies).
default = []
# Optional arbitrary-precision evaluation, which breaks the f64 accuracy ceiling at
# large t. Pulls in the pure-Rust `dashu-float` crate; enable with `--features bigfloat`.
bigfloat = ["dep:dashu-float"]

[dependencies]
# Optional; only compiled in when the `bigfloat` feature is enabled.
dashu-float = { version = "0.4", optional = true }